@@ -317,6 +317,8 @@
 	* 'errno' is now defined to be *get_errno_ptr() with no name conflicts
 	* Added lseek() and fseek()
 	* Integrated pascal test case on the simulation platform.  Needs pascal-0.1.1.
+	* Integrated pascal test case on the z16f platform.  Needs pascal-0.1.2 (not
+	  yet released).
 
 
 
